fix: global toggle field is now vertically aligned with other global buttons

--- a/css/style.css
+++ b/css/style.css
@@ -331,6 +331,6 @@ body {
     top: 0;
 }
 
-.btn-label {
-    margin-top: 7px
+.btn-navbar {
+    margin-top: 7px;
 }
